Yaml/code-azure/was-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: was-dep
  labels:
    app: was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      serviceAccountName: storage-sa
      containers:
      - name: was
        # image: jjy4041/ssgpang:c68af1869b43f22494f2781230e770b8c60f928a
        image: jjy4041/ssgpang:f53256f6848e99b829065afa60efa2d438bf8dba
        ports:
        - containerPort: 80
      tolerations:
      - key: "app"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
