Yaml/code-azure/web-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: web-dep
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: conf
            mountPath: /etc/nginx/conf.d
      tolerations:
      - key: "app"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      volumes:
        - name: conf
          configMap:
            name: conf
